crates/weft-snapshots/tests/snapshots/react-tsx/corpus-todo-list.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-todo-list as react-tsx
---
import { Fragment } from "react";

export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _text(v: unknown): string {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _on(v: unknown): boolean {
  return v === "false" ? false : Boolean(v);
}

function _squash(v: string): string {
  return v.trim().replace(/\s+/g, " ");
}

function _list(v: unknown): any[] {
  return Array.isArray(v) ? v : [];
}

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen({ data, actions, onChange }: WeftProps) {
  return (
    <main data-weft-id="todos" aria-label="Tasks">
      <h1 data-weft-id="title">Tasks</h1>
      <form data-weft-id="add-form" onSubmit={(_e) => { _e.preventDefault(); _act(actions, { id: "add-form", action: "todo.add" }); }}>
        <div data-weft-id="add-row" style={{ gap: "var(--weft-space-sm)", display: "flex", flexDirection: "row", alignItems: "center" }}>
          <div data-weft-field="">
            <label>
              <span aria-hidden="true">New task</span>
              <input data-weft-id="draft" aria-label="New task" type="text" value={_text(data?.draft)} onChange={(_e) => onChange?.("$.draft", _e.currentTarget.value)} />
            </label>
          </div>
          <button data-weft-id="add" type="submit" disabled={!_on(data?.draft)} data-variant="primary" onClick={(_e) => { _e.preventDefault(); _act(actions, { id: "add-form", action: "todo.add" }); }}>Add</button>
        </div>
      </form>
      <ul data-weft-id="list">
        {_list(data?.todos).map((todo, _i0) => (
          <Fragment key={_i0}>
            <li data-weft-id={"todo[" + _i0 + "]"}>
              <label>
                <input data-weft-id={"todo-done[" + _i0 + "]"} type="checkbox" aria-label={_text(todo?.title).trim()} checked={_on(todo?.done)} onChange={(_e) => onChange?.("$.todos." + _i0 + ".done", _e.currentTarget.checked)} />
                {_text(todo?.title).trim() ? (
                  <span aria-hidden="true">
                    {_text(todo?.title).trim()}
                  </span>
                ) : null}
              </label>
              <button data-weft-id={"todo-remove[" + _i0 + "]"} type="button" onClick={(_e) => _act(actions, { id: "todo-remove[" + _i0 + "]", action: "todo.remove", item: "$.todos." + _i0 })}>Remove</button>
            </li>
          </Fragment>
        ))}
      </ul>
      <div data-weft-id="remaining">
        {!(_text(data?.remainingLabel).trim() === "") ? _squash(_text(data?.remainingLabel)) : ""}
      </div>
    </main>
  );
}
