crates/weft-snapshots/tests/snapshots/react-tsx/corpus-wizard-step.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-wizard-step as react-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _text(v: unknown): string {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _on(v: unknown): boolean {
  return v === "false" ? false : Boolean(v);
}

function _squash(v: string): string {
  return v.trim().replace(/\s+/g, " ");
}

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen({ data, actions, onChange }: WeftProps) {
  return (
    <main data-weft-id="wizard" aria-label="Setup wizard">
      <h1 data-weft-id="title">Choose a plan</h1>
      <div data-weft-id="progress">
        {!(_text(data?.progress).trim() === "") ? _squash(_text(data?.progress)) : ""}
      </div>
      <div data-weft-id="plan" aria-label="Plan" role="radiogroup">
        <span aria-hidden="true">Plan</span>
        <label>
          <input data-weft-id="plan-free" type="radio" name={"weft-plan"} value="free" aria-label="Free" checked={_text(data?.plan) !== "" && "free" === _text(data?.plan)} onChange={() => onChange?.("$.plan", "free")} />
          <span aria-hidden="true">Free</span>
        </label>
        <label>
          <input data-weft-id="plan-pro" type="radio" name={"weft-plan"} value="pro" aria-label="Pro" checked={_text(data?.plan) !== "" && "pro" === _text(data?.plan)} onChange={() => onChange?.("$.plan", "pro")} />
          <span aria-hidden="true">Pro</span>
        </label>
        <label>
          <input data-weft-id="plan-team" type="radio" name={"weft-plan"} value="team" aria-label="Team" checked={_text(data?.plan) !== "" && "team" === _text(data?.plan)} onChange={() => onChange?.("$.plan", "team")} />
          <span aria-hidden="true">Team</span>
        </label>
      </div>
      <div data-weft-id="nav" style={{ gap: "var(--weft-space-sm)", display: "flex", flexDirection: "row", alignItems: "center" }}>
        <button data-weft-id="back" type="button" onClick={(_e) => _act(actions, { id: "back", action: "wizard.back" })}>Back</button>
        <button data-weft-id="next" type="button" disabled={!_on(data?.plan)} data-variant="primary" onClick={(_e) => _act(actions, { id: "next", action: "wizard.next" })}>Next</button>
      </div>
    </main>
  );
}
