crates/weft-snapshots/tests/snapshots/react-tsx/example-button.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-button as react-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _on(v: unknown): boolean {
  return v === "false" ? false : Boolean(v);
}

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen({ data, actions, onChange }: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Checkout">
      <button data-weft-id="pay" data-state="idle" type="button" disabled={!_on(data?.cartReady)} data-variant="primary" onClick={(_e) => _act(actions, { id: "pay", action: "order.pay" })}>Pay now</button>
    </main>
  );
}
